--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
+:root {
+  /*colors*/
+  --main-bg-color: #fafafe;
+  --white: #ffffff;
+  --orange: #f9a109;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,9 +15,14 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--main-bg-color);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
 }
