added the title for the home page and the search component

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
   --white: #ffffff;
   --orange: #f9a109;
   --gray: #454545;
+  --title-color: #34333a;
+
   --xl-font: 26px;
   --l-font: 18px;
   --m-font: 16px;
