--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
   --xs-font: 12px;
 
   --search-input-shadow: 0px 2px 12px 0px #0000000a;
+  --shopping-item-shadow: 0px 2px 12px 0px #0000000d;
 }
 
 * {
