--- a/components/search-input/search-input.module.css
+++ b/components/search-input/search-input.module.css
@@ -1,17 +1,20 @@
 .searchInputContiner {
   display: flex;
   align-items: center;
+  height: 100%;
+  background-color: var(--white);
+  border-radius: 12px;
+  box-shadow: var(--search-input-shadow);
 }
 
 .searchInput {
-  width: 275px;
-  height: 51px;
-  border-radius: 12px;
+  width: 100%;
+  height: 100%;
   border: none;
   outline: none;
-  padding-left: 62px;
+  padding-left: 20px;
   font-size: 14px;
-  box-shadow: var(--search-input-shadow);
+  border-radius: 12px;
 }
 
 .searchInput::placeholder {
@@ -19,5 +22,5 @@
 }
 .magnifyingGlass {
   position: relative;
-  left: 36px;
+  left: 10px;
 }
