--- a/components/side-bar/side-bar.module.css
+++ b/components/side-bar/side-bar.module.css
@@ -1,5 +1,5 @@
 .sideBar {
-  width: 389px;
+  width: 27%;
   height: 100vh;
   position: fixed;
   top: 0px;
@@ -7,4 +7,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media only screen and (max-width: 992px) {
+  .sideBar {
+    right: -27%;
+  }
+  .open {
+    right: 0;
+    width: 84%;
+  }
 }
