--- a/components/side-bar/shopping-list/shopping-list.module.css
+++ b/components/side-bar/shopping-list/shopping-list.module.css
@@ -3,3 +3,58 @@
   height: 100%;
   background-color: var(--shopping-list-background);
 }
+
+.addItemBackground {
+  width: 80%;
+  height: 130px;
+  border-radius: 24px;
+  background-color: var(--add-item-background);
+  margin: 43px auto 0 auto;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.addItemImageContainer {
+  width: 104px;
+  height: 118px;
+  position: relative;
+  display: inline-block;
+  bottom: 18px;
+  left: 12px;
+}
+
+.addItemDescription {
+  font-weight: 700;
+  color: var(--white);
+  font-size: var(--m-font);
+}
+
+.addItemButton {
+  box-shadow: var(--search-input-shadow);
+  background-color: var(--white);
+  width: 120px;
+  height: 40px;
+  border-radius: 12px;
+  border: none;
+  font-weight: 700;
+  font-size: var(--s-font);
+  margin-top: 14px;
+}
+
+@media only screen and (max-width: 992px) {
+  .addItemBackground {
+    width: 83%;
+    height: 119px;
+    margin: 25px auto 0 auto;
+    gap: 20px;
+  }
+  .addItemImageContainer {
+    left: 0;
+  }
+  .addItemButton {
+    margin-top: 12px;
+    width: 110px;
+    height: 37px;
+  }
+}
