--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -1,5 +1,5 @@
 .inputContainer {
-  height: 100%;
+  height: 61px;
   background-color: var(--white);
   border-radius: 12px;
   border: 2px solid var(--shopping-list-disabled);
@@ -16,6 +16,14 @@
 }
 .inputContainer:has(.input:focus) {
   border-color: var(--orange);
+}
+.inputContainer:has(textarea) {
+  height: 110px;
+}
+
+textarea.input {
+  padding-top: 22px;
+  resize: none;
 }
 .inputButton {
   height: 100%;
