added the categoryList prop to the input component

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   --gray: #454545;
   --title-color: #34333a;
   --search-input-placeholder-color: #bdbdbd;
+  --category-list-border-color: #e0e0e0;
+  --category-item-hovered: #f2f2f2;
   --shopping-list-background: #fff0de;
   --add-item-background: #80485b;
   --shopping-list-disabled: #c1c1c4;
