--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -63,6 +63,7 @@ textarea.input {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 .categoryItem {
   width: 90%;
