--- a/components/shopping-cart-icon/shopping-cart-icon.module.css
+++ b/components/shopping-cart-icon/shopping-cart-icon.module.css
@@ -2,7 +2,7 @@
   width: 42px;
   height: 42px;
   border-radius: 100%;
-  background-color: var(--orange);
+  background-color: var(--primary);
   display: flex;
   align-items: center;
   justify-content: center;
