--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -54,6 +54,7 @@ textarea.input {
   color: var(--primary);
 }
 .categoryList {
+  position: relative;
   margin-top: 12px;
   width: 100%;
   height: auto;
@@ -65,6 +66,7 @@ textarea.input {
   flex-direction: column;
   align-items: center;
   cursor: pointer;
+  z-index: 2;
 }
 .categoryItem {
   width: 90%;
