--- a/components/side-bar/side-bar.module.css
+++ b/components/side-bar/side-bar.module.css
@@ -4,11 +4,12 @@
   position: fixed;
   top: 0px;
   right: 0px;
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 992px) {
   .sideBar {
-    right: -27%;
+    right: -300px;
   }
   .open {
     right: 0;
