--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,8 @@
   --shopping-list-disabled: #c1c1c4;
   --complete-background: #56ccf2;
   --danger-background: #eb5757;
+  --success: #57eb57;
+  /*font sizes*/
   --xxxl-font: 26px;
   --xxl-font: 24px;
   --xl-font: 20px;
