--- a/app/page.module.css
+++ b/app/page.module.css
@@ -31,6 +31,11 @@
   width: 275.61px;
   height: 51px;
 }
+.shppingItemsContainer {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  row-gap: 27px;
+}
 
 @media only screen and (max-width: 992px) {
   .home {
