made the height of the category list in the input component fixed

--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -57,7 +57,8 @@ textarea.input {
   position: relative;
   margin-top: 12px;
   width: 100%;
-  height: auto;
+  max-height: 168px;
+  overflow-y: scroll;
   background-color: var(--white);
   box-shadow: var(--search-input-shadow);
   border: 1px solid var(--category-list-border-color);
