--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,20 @@ textarea {
   margin-right: 27%;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px var(--category-list-border-color);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--search-input-placeholder-color);
+  border-radius: 10px;
+}
+
 @media only screen and (max-width: 992px) {
   .global-container {
     margin-left: var(--mobile-nav-bar-width);
