--- a/components/input/input.module.css
+++ b/components/input/input.module.css
@@ -54,7 +54,7 @@ textarea.input {
   color: var(--primary);
 }
 .categoryList {
-  position: relative;
+  position: absolute;
   margin-top: 12px;
   width: 100%;
   max-height: 168px;
