--- a/components/side-bar/add-item-form/add-item-form.module.css
+++ b/components/side-bar/add-item-form/add-item-form.module.css
@@ -17,6 +17,7 @@
   margin-top: 34px;
   margin-right: 40px;
   height: 100%;
+  position: relative;
 }
 .inputContainer {
   margin-top: 18px;
@@ -25,7 +26,8 @@
 .buttonsContainer {
   width: 100%;
   position: absolute;
-  bottom: 35px;
+  bottom: -292px;
+  padding-bottom: 10px;
   display: flex;
   justify-content: center;
   gap: 40px;
@@ -50,12 +52,5 @@
   }
   .buttonsContainer {
     gap: 20px;
-  }
-}
-
-@media only screen and (max-width: 280px) {
-  .buttonsContainer {
-    position: static;
-    margin-top: 20px;
   }
 }
