--- a/components/side-bar/side-bar.module.css
+++ b/components/side-bar/side-bar.module.css
@@ -1,9 +1,9 @@
 .sideBar {
   width: 27%;
-  height: 100vh;
   position: fixed;
   top: 0px;
   right: 0px;
+  bottom: 0px;
   overflow-y: scroll;
 }
 
