--- a/components/side-bar/shopping-item-details/shopping-item-details.module.css
+++ b/components/side-bar/shopping-item-details/shopping-item-details.module.css
@@ -1,11 +1,12 @@
 .shoppingItemDetails {
   background-color: var(--white);
-  height: 100%;
+  min-height: 100%;
 }
 .shoppingItemDatailsContainer {
   width: 80%;
   padding-top: 27px;
   margin-inline: auto;
+  display: grid;
 }
 .backNavigationContianer {
   display: flex;
@@ -18,4 +19,33 @@
   color: var(--primary);
   font-weight: 700;
   line-height: 17.5px;
+}
+.itemImageContainer {
+  position: relative;
+  width: 100%;
+  height: 220px;
+  margin-top: 32px;
+  margin-bottom: 56px;
+}
+.itemImage {
+  border-radius: 25px;
+  object-fit: cover;
+}
+.itemDetailsContainer {
+  margin-bottom: 36px;
+}
+.detailsTitle {
+  font-size: var(--xs-font);
+  font-weight: 500;
+  line-height: 15px;
+  color: var(--shopping-list-disabled);
+  margin-bottom: 11px;
+}
+.detailsValue {
+  font-size: var(--l-font);
+  font-weight: 500;
+  line-height: 30px;
+}
+.name {
+  font-size: var(--xxl-font);
 }
