added the ShoppingItemCountControl component

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --shopping-list-background: #fff0de;
   --add-item-background: #80485b;
   --shopping-list-disabled: #c1c1c4;
+  --gray-text: #828282;
   --complete-background: #56ccf2;
   --danger-background: #eb5757;
   --success: #57eb57;
