--- a/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
+++ b/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
@@ -27,6 +27,15 @@
   border-radius: 12px;
   background-color: var(--white);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+}
+.deleteIconBackground {
+  background-color: var(--primary);
+  padding: 12px 10px;
+  border-radius: 12px;
+}
+
+.itemCountControls img {
+  cursor: pointer;
 }
