--- a/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
+++ b/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
@@ -55,3 +55,9 @@
   cursor: pointer;
   transition: 0.3s;
 }
+
+@media only screen and (max-width: 992px) {
+  .itemName {
+    font-size: var(--s-font);
+  }
+}
