changed the some names of the Button component styles

--- a/components/button/button.module.css
+++ b/components/button/button.module.css
@@ -22,11 +22,11 @@
   background-color: var(--complete-background);
 }
 
-.delete {
+.danger {
   background-color: var(--danger-background);
 }
 
-.cancel {
+.transparent {
   background-color: transparent;
   color: var(--title-color);
 }
