--- a/components/modal/modal.module.css
+++ b/components/modal/modal.module.css
@@ -7,8 +7,8 @@
 }
 
 .modalCloseButton {
-  position: absolute;
-  top: 15px;
-  right: 30px;
+  display: block;
+  margin-inline-start: auto;
+  margin-inline-end: 0;
   cursor: pointer;
 }
