edited the ShoppingItemCountControl component to use loading state

--- a/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
+++ b/components/side-bar/shopping-list/shopping-item-count-control/shopping-item-count-control.module.css
@@ -50,3 +50,11 @@
   cursor: pointer;
   transition: 0.3s;
 }
+
+.disabledImage {
+  pointer-events: none;
+}
+
+.itemCountControls:has(.disabledImage) {
+  cursor: not-allowed;
+}
