--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --shopping-list-disabled: #c1c1c4;
   --gray-text: #828282;
   --complete-background: #56ccf2;
-  --danger-background: #eb5757;
+  --danger: #eb5757;
   --success: #57eb57;
   /*font sizes*/
   --xxxl-font: 26px;
