--- a/components/side-bar/add-item-form/add-item-form.module.css
+++ b/components/side-bar/add-item-form/add-item-form.module.css
@@ -35,7 +35,7 @@
   font-weight: 700;
 }
 .error {
-  color: var(--danger-background);
+  color: var(--danger);
 }
 .success {
   color: var(--success);
