updated the Checkbox component to use all the props in an input element and to show a cursor: not-allowed; when it is disabled

--- a/components/checkbox/checkbox.module.css
+++ b/components/checkbox/checkbox.module.css
@@ -28,6 +28,10 @@
   display: block;
 }
 
+.checkbox:has(input:disabled) {
+  cursor: not-allowed;
+}
+
 .checkbox .checkmark:after {
   width: 6px;
   height: 14px;
