--- a/components/cancel-list-modal/cancel-list-modal.module.css
+++ b/components/cancel-list-modal/cancel-list-modal.module.css
@@ -11,3 +11,9 @@
   display: flex;
   justify-content: flex-end;
 }
+@media only screen and (max-width: 992px) {
+  .modalTextContent {
+    font-size: var(--xl-font);
+    margin-bottom: 20px;
+  }
+}
