--- a/components/modal/modal.module.css
+++ b/components/modal/modal.module.css
@@ -12,3 +12,9 @@
   margin-inline-end: 0;
   cursor: pointer;
 }
+
+@media only screen and (max-width: 992px) {
+  .modal {
+    padding: 10px 20px 20px 28px;
+  }
+}
