added the vertical-bar-chart component

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
   /*colors*/
   --main-bg-color: #fafafe;
   --white: #ffffff;
+  --black: #000000;
   --primary: #f9a109;
   --gray: #454545;
   --title-color: #34333a;
