added the ability to add a title to the vertical-bar-charts-component

--- a/components/vertical-bar-chart/vertical-bar-chart.module.css
+++ b/components/vertical-bar-chart/vertical-bar-chart.module.css
@@ -1,8 +1,18 @@
-.verticalBarChartTick {
-  font-size: var(--s-font);
+.chartText {
   font-weight: bold;
   fill: var(--black);
 }
+.verticalBarChartTick {
+  font-size: var(--s-font);
+}
 .tickRight {
   font-size: var(--l-font);
+}
+.chartTitle {
+  font-size: var(--xxl-font);
+  font-weight: bold;
+}
+.chartTitleContainer {
+  margin-bottom: 33px;
+  margin-left: 10px;
 }
